--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name"> Ingeniería Civil <br> 4º Semestre</div>
+                                    <div class="profile-card__name"> IC <br> 4º Semestre</div>
                                     <div class="profile-card__txt">Administración y Gestión de Proyectos</div>
                                     <h6><a href="mailto:A01284028@itesm.mx">A01284028@itesm.mx</a></h6>
                                     <br><br>
@@ -579,7 +579,7 @@ Ciudad de México</h6>
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name">Médico Cirujano Odontólogo <br> 6º Semestre</div>
+                                    <div class="profile-card__name">MO <br> 6º Semestre</div>
                                     <div class="profile-card__txt">Salud </div>
                                     <h6><a href="mailto:A01197370@itesm.mx">A01197370@itesm.mx</a></h6>
                                     <br><br>
@@ -781,7 +781,7 @@ Programa enfocado en pacientes pediátricos en el cual por medio del juego terap
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name">Economía <br> 7º Semestre</div>
+                                    <div class="profile-card__name">LEC <br> 7º Semestre</div>
                                     <div class="profile-card__txt"> Economía Digital, Consultoría, Finanzas, Gestión de Recursos Públicos </div>
                                     <h6><a href="mailto:A01177191@itesm.mx">A01177191@itesm.mx </a></h6>
                                     <br><br>
@@ -953,7 +953,7 @@ Programa enfocado en pacientes pediátricos en el cual por medio del juego terap
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name">Inteligencia de Negocios <br> 6º Semestre</div>
+                                    <div class="profile-card__name">LIT <br> 6º Semestre</div>
                                     <div class="profile-card__txt"> Redes sociales, servicio al cliente y viajes  </div>
                                     <h6><a href="mailto:A00827760@itesm.mx">A00827760@itesm.mx </a></h6>
                                     <br><br>
@@ -1159,7 +1159,7 @@ Proyecto 99 México 2020 - 2021:
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name">Ingeniería en Innovación y Desarrollo <br>  9º Semestre</div>
+                                    <div class="profile-card__name">IID <br>  9º Semestre</div>
                                     <div class="profile-card__txt"> Innovación, Emprendimiento, Liderazgo, Comunicación, Planeación Estratégica, Relaciones Públicas y Negocios  </div>
                                     <h6><a href="mailto:A00825075@itesm.mx">A00825075@itesm.mx </a></h6>
                                     <br><br>
@@ -1309,7 +1309,7 @@ de residuos, pobreza y educación en el municipio de Mier y Noriega Nuevo León:
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name">Bachelor In Global Business <br> 6º Semestre</div>
+                                    <div class="profile-card__name">BGB <br> 6º Semestre</div>
                                     <div class="profile-card__txt"> Negocios Internaiconales, Mercadotecnia, organización de evetos y servicios  </div>
                                     <h6><a href="mailto:A01282420@itesm.mx">A01282420@itesm.mx </a></h6>
                                     <br><br>
@@ -1800,7 +1800,7 @@ y Node JS,  plataforma que se utiliza para conectar emprendedores con inversores
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name">Licenciatura en Innovación Educativa <br> 7º Semestre </div>
+                                    <div class="profile-card__name">LEI <br> 7º Semestre </div>
                                     <div class="profile-card__txt"> Psicología, planeación estratégica, comunicación, educación y fotografía. </div>
                                     <h6><a href="mailto:A00829675@itesm.mx">A00829675@itesm.mx </a></h6>
                                     <br><br>
@@ -1974,7 +1974,7 @@ y Node JS,  plataforma que se utiliza para conectar emprendedores con inversores
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name">Economía <br> 4º Semestre </div>
+                                    <div class="profile-card__name">LEC <br> 4º Semestre </div>
                                     <div class="profile-card__txt"> Analista Financiera, Banca de inversión, Asociaciones Civiles, Análisis de datos e investigación economica.   </div>
                                     <h6><a href="mailto:A01570825@itesm.mx">A01570825@itesm.mx </a></h6>
                                     <br><br>
@@ -2063,7 +2063,7 @@ y Node JS,  plataforma que se utiliza para conectar emprendedores con inversores
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name">Licenciatura en Comunicación <br> 7º Semestre </div>
+                                    <div class="profile-card__name">LC <br> 7º Semestre </div>
                                     <div class="profile-card__txt"> Cine documental, cine de ficción, fotografía de portada, artística y de producto. </div>
                                     <h6><a href="mailto:A01233756@itesm.mx">A01233756@itesm.mx </a></h6>
                                     <br><br>
@@ -2120,14 +2120,14 @@ y Node JS,  plataforma que se utiliza para conectar emprendedores con inversores
 - 220 FIT&GYM / 2020: Edición y Grabación de videos publicitarios en conjunto con posts de Facebook</h6>
                                     <br>
                                     <div class="profile-card__txt">Proyectos destacados</div>
-                                    <a>- ADIÓS: Cortometraje 2019 en ITESM <a href="https://www.youtube.com/watch?v=rRF_Kz6S3X8&t=31s&ab_channel=NadiaP.B.S">
-https://www.youtube.com/watch?v=rRF_Kz6S3X8&t=31s&ab_channel=NadiaP.B.S</a></h6>
+                                    <h6>- ADIÓS: Cortometraje 2019 en ITESM <a href="https://www.youtube.com/watch?v=rRF_Kz6S3X8&t=31s&ab_channel=NadiaP.B.S">
+https://www.youtube.com/watch?v=rRF_Kz6S3X8&t=31s&ab_channel=NadiaP.B.S</a>
 <br><br>
-- CONTRA LUZ : cortometraje 2021 en ITESM <a href="https://www.youtube.com/watch?v=2bgeXWXVux8&ab_channel=NadiaP.B.S"></a>
+- CONTRA LUZ : cortometraje 2021 en ITESM <a href="https://www.youtube.com/watch?v=2bgeXWXVux8&ab_channel=NadiaP.B.S">
 https://www.youtube.com/watch?v=2bgeXWXVux8&ab_channel=NadiaP.B.S"</a></h6>
                                     <br>
                                     <div class="profile-card__txt">Servicio social y voluntariado</div>
-                                    <a> - Servicios sociales con Casas de apoyo a familias con cáncer, familias con casos de violencia, grabaciones de pláticas escolares a niños de escasos recursos.
+                                    <h6> - Servicios sociales con Casas de apoyo a familias con cáncer, familias con casos de violencia, grabaciones de pláticas escolares a niños de escasos recursos.
 <br><br>
 - Voluntariado en proyectos relacionados con discapacidades intelectuales: <a href="https://www.youtube.com/watch?v=N93Gxdnxlj4&t=11s&ab_channel=NadiaP.B.S">
 https://www.youtube.com/watch?v=N93Gxdnxlj4&t=11s&ab_channel=NadiaP.B.S"</a></h6>
@@ -2158,7 +2158,7 @@ https://www.youtube.com/watch?v=N93Gxdnxlj4&t=11s&ab_channel=NadiaP.B.S"</a></h6
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name">Médico Cirujano <br> 5º Semestre </div>
+                                    <div class="profile-card__name">MC <br> 5º Semestre </div>
                                     <div class="profile-card__txt"> Cirugía y Oncología </div>
                                     <h6><a href="mailto:A00828542@itesm.mx">A00828542@itesm.mx</a></h6>
                                     <br><br>
@@ -2243,7 +2243,7 @@ https://www.youtube.com/watch?v=N93Gxdnxlj4&t=11s&ab_channel=NadiaP.B.S"</a></h6
                             <div class="wrapper">
                                 <div class="profile-card js-profile-card">
                                   <div class="profile-card__cnt js-profile-cnt">
-                                    <div class="profile-card__name"> Licenciado en Mercadotecnia <br> 7º Semestre </div>
+                                    <div class="profile-card__name"> LEM <br> 7º Semestre </div>
                                     <div class="profile-card__txt"> Investigación de mercados, generación de estrategias/campañas, marketing digital y relaciones públicas. </div>
                                     <h6><a href="mailto:A01570504@itesm.mx"> A01570504@itesm.mx </a></h6>
                                     <br><br>
